--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -73,11 +74,13 @@
     <Compile Include="AESHelper2.cs" />
     <Compile Include="AESHelper3.cs" />
     <Compile Include="ExcelHelper.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="JsonHelper.cs" />
     <Compile Include="Loger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAHelper.cs" />
     <Compile Include="StringHelper.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
