--- a/Helper/packages.config
+++ b/Helper/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="NPOI" version="2.3.0" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 </packages>
