--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CSkin">
-      <HintPath>..\TeacherUser\bin\Debug\CSkin.dll</HintPath>
+      <HintPath>..\..\..\..\dll\CSkin 4.0\CSkin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
