--- a/MyTCP/MyTCP.csproj
+++ b/MyTCP/MyTCP.csproj
@@ -32,13 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxInterop.AXVLC">
-      <HintPath>..\..\Stu\StudentUser\bin\Debug\AxInterop.AXVLC.dll</HintPath>
+      <HintPath>..\lib\AxInterop.AXVLC.dll</HintPath>
     </Reference>
     <Reference Include="AxInterop.WMPLib">
-      <HintPath>..\..\Stu\StudentUser\bin\Debug\AxInterop.WMPLib.dll</HintPath>
+      <HintPath>..\lib\AxInterop.WMPLib.dll</HintPath>
     </Reference>
     <Reference Include="Interop.AXVLC">
-      <HintPath>..\..\Stu\StudentUser\bin\Debug\Interop.AXVLC.dll</HintPath>
+      <HintPath>..\lib\Interop.AXVLC.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
