--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxInterop.AXVLC">
-      <HintPath>..\..\Stu\StudentUser\bin\Debug\AxInterop.AXVLC.dll</HintPath>
+      <HintPath>..\lib\AxInterop.AXVLC.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
