--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -36,6 +36,10 @@
     <Reference Include="AxInterop.AXVLC">
       <HintPath>..\lib\AxInterop.AXVLC.dll</HintPath>
     </Reference>
+    <Reference Include="CSkin, Version=16.1.14.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\dll\CSkin 4.0\CSkin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +58,12 @@
     </Compile>
     <Compile Include="BlackScreen.designer.cs">
       <DependentUpon>BlackScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CSkinBaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CSkinBaseForm.designer.cs">
+      <DependentUpon>CSkinBaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalVariable.cs" />
     <Compile Include="UserActivityHook.cs" />
@@ -82,6 +92,9 @@
     <EmbeddedResource Include="BlackScreen.resx">
       <DependentUpon>BlackScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CSkinBaseForm.resx">
+      <DependentUpon>CSkinBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserMainForm.resx">
       <DependentUpon>UserMainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +109,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ViewRtsp.resx">
       <DependentUpon>ViewRtsp.cs</DependentUpon>
@@ -132,6 +146,171 @@
       <Project>{ad4cd22f-e3b9-4a1f-bea6-dc373524b896}</Project>
       <Name>MyTCP</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_restore_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_restore_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_restore_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_min_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_min_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_min_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_max_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_max_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_max_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_close_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_close_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sysbtn_close_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ShadowPalace.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\set_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rt.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rm.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\noon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\night.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\morning.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu_btn_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu_btn_highlight.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_7.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_6.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_5.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_4.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main_1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lt.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lm.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_close_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_close_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_close_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Full_close_normal.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Full_close_hover.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Full_close_down.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_norml.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_Mouse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btn_Down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BackPalace1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BackPalace.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AxInterop.AXVLC.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\allbtn_highlight.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\allbtn_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_white_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_white_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_white_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_setting_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aio_head_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\afternoon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\4.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
