--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -61,6 +61,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -74,6 +75,7 @@
     <Compile Include="AESHelper.cs" />
     <Compile Include="AESHelper2.cs" />
     <Compile Include="AESHelper3.cs" />
+    <Compile Include="ControlExtensions.cs" />
     <Compile Include="ExcelHelper.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="JsonHelper.cs" />
