--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
-    </startup>
+  <appSettings>
+    <!-- 服务器IP-->
+    <!--外网116.212.115.15-->
+    <add key="serverIP" value="116.212.115.15"/>
+    <add key="serverPort" value="8899"/>
+
+    <!-- 服务器端数据库信息-->
+    <add key="Database" value="netroom"/>
+    <add key="Table" value="userInfo"/>
+    <add key="User ID" value="root"/>
+    <add key="Password" value="root"/>
+
+    <!-- ftp登录信息-->
+    <add key="FtpName" value="tony"/>
+    <add key="FtpPassword" value="123"/>
+    <add key="screenState" value="0"/>
+
+
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+  </startup>
 </configuration>
