--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -65,6 +65,12 @@
     <Compile Include="CSkinBaseForm.designer.cs">
       <DependentUpon>CSkinBaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserActivityHook.cs" />
     <Compile Include="ViewRtsp.cs">
       <SubType>Form</SubType>
