--- a/MyTCP/MyTCP.csproj
+++ b/MyTCP/MyTCP.csproj
@@ -37,6 +37,12 @@
     <Reference Include="AxInterop.WMPLib">
       <HintPath>..\lib\AxInterop.WMPLib.dll</HintPath>
     </Reference>
+    <Reference Include="CSkin">
+      <HintPath>..\..\..\..\dll\CSkin 16.1.14.2\CSkin 4.0\CSkin.dll</HintPath>
+    </Reference>
+    <Reference Include="DirectShowLib-2005">
+      <HintPath>C:\Users\teriu\Desktop\DirectShowLibV2-1\lib\DirectShowLib-2005.dll</HintPath>
+    </Reference>
     <Reference Include="Interop.AXVLC">
       <HintPath>..\lib\Interop.AXVLC.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -44,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
