--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -40,7 +40,7 @@
       <HintPath>..\lib\AxInterop.WMPLib.dll</HintPath>
     </Reference>
     <Reference Include="CSkin">
-      <HintPath>..\..\..\..\dll\CSkin 16.1.14.2\CSkin 4.0\CSkin.dll</HintPath>
+      <HintPath>..\..\..\..\..\DLL\CSkin\CSkin 4.0\CSkin.dll</HintPath>
     </Reference>
     <Reference Include="Interop.AXVLC">
       <HintPath>..\lib\Interop.AXVLC.dll</HintPath>
