--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+  </configSections>
   <appSettings>
     <!-- 服务器IP-->
     <!--外网116.212.115.15-->
